[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.5"
daemonize = "0.5.0"
dirs = "5.0.1"
futures = "0.3.28"
futures-util = "0.3.28"
mini-redis = "0.4"
tokio = { version = "1", features = ["full"] }